--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/assets/index.8260f682.js"></script>
-    <link rel="stylesheet" href="/assets/index.6d1fbf38.css">
+    <script type="module" crossorigin src="/Github-pages-test/assets/index.8260f682.js"></script>
+    <link rel="stylesheet" href="/Github-pages-test/assets/index.6d1fbf38.css">
   </head>
   <body>
     <div id="root"></div>
