--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Github-pages-test/logo.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="/Github-pages-test/assets/index.a73f52ff.js"></script>
-    <link rel="stylesheet" href="/Github-pages-test/assets/index.48f1df3b.css">
+    <title>Helmet Configurator</title>
+    <script type="module" crossorigin src="/Github-pages-test/assets/index.e5330b13.js"></script>
+    <link rel="stylesheet" href="/Github-pages-test/assets/index.509e5bf2.css">
   </head>
   <body>
     <div id="root"></div>
